--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,6 @@
     "start": "sirv public --no-clear"
   },
   "devDependencies": {
-    "@rgossiaux/svelte-headlessui": "^1.0.0-beta.12",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
@@ -20,7 +19,11 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "d3": "^7.3.0",
-    "sirv-cli": "^2.0.0"
+    "d3-array": "^3.1.6",
+    "d3-scale": "^4.0.2",
+    "d3-scale-chromatic": "^3.0.0",
+    "d3-time": "^3.0.0",
+    "sirv-cli": "^2.0.0",
+    "svelte-switch": "0.0.5"
   }
 }
